ham icon mobile screen fix

--- a/src/app/components/core/nav/hamburger/hamburger.component.scss
+++ b/src/app/components/core/nav/hamburger/hamburger.component.scss
@@ -30,8 +30,7 @@
 
 @media screen and (max-width: 1000px) {
     .menu {
-        mat-icon {
-            top: 6px;
-        }
+        top: 8px;
+        right: 10px;
     }
 }
